[package]
name = "v6plus-tun"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = [ "default", "derive" ] }
cmd_lib = "1.3.0"
ipnet = "2.9"
